# programowanie_gier

./: .gitignore  CMakeLists.txt  Project1.sln  README.md  ShaderUtils.cpp  main.cpp  rotating.cpp
Game/: BallObject.cpp  BallObject.h  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  Main.cpp  ParticleGenerator.cpp  ParticleGenerator.h  PostProcessor.cpp  PostProcessor.h  PowerUp.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture2D.cpp
Libs/glad/include/glad/: glad.h
Libs/glad/src/: glad.c
Project1/: Project1.vcxproj  Project1.vcxproj.filters  main.cpp  rotating.cpp
headers/: Camera.h  ShaderUtils.hpp  Shader_s.h
learnOpenGL/: camera.cpp  triangle.cpp  triangleWithGradient.cpp  triangleWithGradientUsingClass.cpp
resources/shaders/: fragmentShaderSource.fs  shader1.vs
rotacje_i_przesuniecia/: billard.cpp  billard_with_camera.cpp  grawitacja.cpp  klawiatura.cpp
shaderGeo/: geometry.cpp  geometry2.cpp
shaders/: SingleColor.fs
sources/: ShaderUtils.cpp  Shader_s.cpp  cottage2.cpp  helicopter.cpp  myHelicopter.cpp  rotating.cpp  rotatingCube.cpp  rotatingCubes.cpp  triangle.cpp
tekstury/: PlayerClass.h  textures.cpp
